# FFE

./: .gitignore  .python-version  AGENTS.md  README.md  __init__.py  pyproject.toml  setup.py
cpp/: parser.cpp
example/: __init__.py  ffe_parse_test.py
src/: ffe_parse.py
src/ffe/: __init__.py  ffe_parse.py  parser.py
src/ffe/data/: __init__.py  ffd.py
src/ffe/utils/: __init__.py  ffe2xr.py
tests/: test_fast_parser.py
