[project]
name = "ffe"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10.0"
dependencies = [
    "loguru>=0.7.3",
    "xarray>=2025.3.1",
]

[build-system]
requires = [
    "setuptools>=64",
    "wheel",
    "pybind11>=3.0.0",
]
build-backend = "setuptools.build_meta"
