[project]
name = "ffe"
version = "0.1.0"
description = "Fast Python/C++ parser for FEKO .ffe far-field files"
readme = "README.md"
requires-python = ">=3.11.0"
dependencies = [
    "numpy>=1.24",
    "xarray>=2025.3.1",
]

[project.optional-dependencies]
dev = [
    "pytest>=8",
]

[build-system]
requires = [
    "setuptools>=64",
    "wheel",
    "pybind11>=3.0.0",
]
build-backend = "setuptools.build_meta"
